# wex

./: .gitattributes  .gitignore  .gitlab-ci.yml  .lgtm.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.MD  DView_dependencies  LICENSE  LICENSE.md  README.md  build_libcurl_ssl_for_windows.md  make_out  readme.md
src/: CMakeLists.txt  choicetree.cpp  codeedit.cpp  csv.cpp  dclatex.cpp  diurnal.cpp  easycurl.cpp  extgrid.cpp  exttext.cpp  exttextstream.cpp  exttree.cpp  gleasy.cpp  jsonreader.cpp  jsonval.cpp  jsonwriter.cpp  label.cpp  lkscript.cpp  md5.cpp  metro.cpp  mswfatal.cpp  numeric.cpp  pagelayout.cpp  pageobjects.cpp  radiochoice.cpp  registration.cpp  ribbonbook.cpp  sched.cpp  snaplay.cpp  tpdlg.cpp  uiform.cpp  utils.cpp
src/clipper/: clipper.cpp
src/dview/: barchart.cpng  dvautocolourassigner.cpp  dvboxplotctrl.cpp  dvcoarserainbowcolourmap.cpp  dvcolourmap.cpp  dvdcctrl.cpp  dvdmapctrl.cpp  dvfiledataset.cpp  dvfilereader.cpp  dvfinerainbowcolourmap.cpp  dvplotctrl.cpp  dvplotctrlsettings.cpp  dvplothelper.cpp  dvpncdfctrl.cpp  dvprofilectrl.cpp  dvscatterplotctrl.cpp  dvselectionlist.cpp  dvstatisticsctrl.cpp  dvstatisticstablectrl.cpp  dvtimeseriesctrl.cpp  dvtimeseriesdataset.cpp  preferences.binpng  preferences.xpm  zoom_fit.binpng  zoom_fit.xpm  zoom_in.binpng  zoom_in.xpm  zoom_out.binpng  zoom_out.xpm
src/freetype/include/: ft2build.h  slimftmodules.h  slimftoptions.h
src/freetype/include/freetype/: freetype.h  ftadvanc.h  ftautoh.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftcid.h  fterrdef.h  fterrors.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttrigon.h  ftttdrv.h  fttypes.h  ftwinfnt.h  t1tables.h  (+3 more)
src/freetype/src/autofit/: afangles.c  afblue.c  afblue.cin  afblue.h  afblue.hin  afcjk.c  afcjk.h  afcover.h  afdummy.c  afdummy.h  aferrors.h  afglobal.c  afglobal.h  afhints.c  afhints.h  afindic.c  afindic.h  aflatin.c  aflatin.h  aflatin2.c  aflatin2.h  afloader.c  afloader.h  afmodule.c  afmodule.h  afpic.c  afpic.h  afranges.c  afranges.h  afscript.h  afstyles.h  aftypes.h  afwarp.c  afwarp.h  afwrtsys.h  autofit.c  hbshim.c  hbshim.h
src/freetype/src/base/: basepic.c  basepic.h  ftadvanc.c  ftapi.c  ftbase.h  ftbbox.c  ftbdf.c  ftbitmap.c  ftcalc.c  ftcid.c  ftdbgmem.c  ftdebug.c  ftfntfmt.c  ftfstype.c  ftgasp.c  ftgloadr.c  ftglyph.c  ftgxval.c  ftinit.c  ftlcdfil.c  ftmac.c  ftmm.c  ftobjs.c  ftotval.c  ftoutln.c  ftpatent.c  ftpfr.c  ftpic.c  ftrfork.c  ftsnames.c  ftstream.c  ftstroke.c  ftsynth.c  ftsystem.c  fttrigon.c  fttype1.c  ftutil.c  ftwinfnt.c  md5.c  md5.h
src/freetype/src/bdf/: bdf.h  bdfdrivr.c  bdfdrivr.h  bdferror.h  bdflib.c
src/freetype/src/bzip2/: ftbzip2.c
src/freetype/src/cache/: ftcbasic.c  ftccache.c  ftccache.h  ftccback.h  ftccmap.c  ftcerror.h  ftcglyph.c  ftcglyph.h  ftcimage.c  ftcimage.h  ftcmanag.c  ftcmanag.h  ftcmru.c  ftcmru.h  ftcsbits.c  ftcsbits.h
src/freetype/src/cff/: cf2arrst.c  cf2arrst.h  cf2blues.c  cf2blues.h  cf2error.c  cf2error.h  cf2fixed.h  cf2font.c  cf2font.h  cf2ft.c  cf2ft.h  cf2glue.h  cf2hints.c  cf2hints.h  cf2intrp.c  cf2intrp.h  cf2read.c  cf2read.h  cf2stack.c  cf2stack.h  cf2types.h  cffcmap.c  cffcmap.h  cffdrivr.c  cffdrivr.h  cfferrs.h  cffgload.c  cffgload.h  cffload.c  cffload.h  cffobjs.c  cffobjs.h  cffparse.c  cffparse.h  cffpic.c  cffpic.h  cfftoken.h  cfftypes.h
src/freetype/src/cid/: ciderrs.h  cidgload.c  cidgload.h  cidload.c  cidload.h  cidobjs.c  cidobjs.h  cidparse.c  cidparse.h  cidriver.c  cidriver.h  cidtoken.h
src/freetype/src/gxvalid/: gxvalid.h  gxvbsln.c  gxvcommn.c  gxvcommn.h  gxverror.h  gxvfeat.c  gxvfeat.h  gxvfgen.c  gxvjust.c  gxvkern.c  gxvlcar.c  gxvmod.c  gxvmod.h  gxvmort.c  gxvmort.h  gxvmort0.c  gxvmort1.c  gxvmort2.c  gxvmort4.c  gxvmort5.c  gxvmorx.c  gxvmorx.h  gxvmorx0.c  gxvmorx1.c  gxvmorx2.c  gxvmorx4.c  gxvmorx5.c  gxvopbd.c  gxvprop.c  gxvtrak.c
src/ole/: activex.cpp  excelauto.cpp  iehtmlwin.cpp
src/pdf/: pdfannotation.cpp  pdfbarcode.cpp  pdfcffdecoder.cpp  pdfcffindex.cpp  pdfcjkfontdata.inc  pdfcmapdata.inc  pdfcolour.cpp  pdfcorefontdata.inc  pdfdc.cpp  pdfdc28.inc  pdfdc29.inc  pdfdecode.cpp  pdfdocument.cpp  pdfencoding.cpp  pdfencrypt.cpp  pdffont.cpp  pdffontdata.cpp  pdffontdatacore.cpp  pdffontdataopentype.cpp  pdffontdatatruetype.cpp  pdffontdatatype0.cpp  pdffontdatatype1.cpp  pdffontdescription.cpp  pdffontdetails.cpp  pdffontextended.cpp  pdffontmanager.cpp  pdffontparser.cpp  pdffontparsertruetype.cpp  pdffontparsertype1.cpp  pdffontsubsetcff.cpp  pdffontsubsettruetype.cpp  pdffontvolt.cpp  pdfform.cpp  pdfgradient.cpp  pdfgraphics.cpp  pdfimage.cpp  pdfkernel.cpp  pdflayer.cpp  pdfobjects.cpp  pdfocg.cpp  (+7 more)
src/plot/: fontdata.h  mplcontour.cpp  mplcontour.h  plannotation.cpp  plaxis.cpp  plbarplot.cpp  plcolourmap.cpp  plcontourplot.cpp  plhistplot.cpp  pllineplot.cpp  ploutdev.cpp  plplot.cpp  plplotctrl.cpp  plscatterplot.cpp  plsectorplot.cpp  pltext.cpp  plwindrose.cpp
src/plot/qhull/: COPYING.txt  geom.c  geom.h  geom2.c  global.c  io.c  io.h  libqhull.c  libqhull.h  mem.c  mem.h  merge.c  merge.h  poly.c  poly.h  poly2.c  qhull_a.h  qset.c  qset.h  random.c  random.h  rboxlib.c  stat.c  stat.h  user.c  user.h  usermem.c  userprintf.c  userprintf_rbox.c
tools/: CMakeLists.txt
tools/cdev/: cdev.cpp
tools/dview/: dview.cpp
tools/dview/test_data/: DataFileTemplate.txt  Mid-YearShortTime.csv  MikeTestProject1 STEP 60m ID 45903584.out  OutputDview2.csv  PVProductionSubhourly.txt  SingleSeriesMultiYear.txt  graphdata.csv  results2.csv
tools/lkscript/: lkscript.cpp
tools/pngtools/: create_all_cpngs.lk  png2c.py  readme.txt
tools/sandbox/: demo_bitmap.cpng  sandbox.cpp
tools/wxvcproject/: Info-template.plist  Makefile-template  template.cpp  template.vcxproj  wx3vc2012project.pl  wx3vc2013project.pl
tools/wxvcproject/icons/: Thumbs.db
(+877 files in other folders)
